--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,13 @@
             android:exported="false" />
         <activity
             android:name=".activities.DailyMealFragment"
-            android:exported="true" />
+            android:exported="false" />
+        <activity
+            android:name=".activities.FavouriteFragment"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MealFragment"
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
